# scopus_tool

./: .env.template  .gitignore  README.md  pyproject.toml
src/scopus_tool/: translate.py
src/spt/command/: __init__.py  command.py  reader.py  writer.py
src/spt/translate/: __main__.py  translate.py  translator.py
