[project]
name = "scopus-tool"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "YO-RO", email = "45329703+YO-RO@users.noreply.github.com" }
]
dependencies = [
    "pandas~=2.0.2",
    "numpy~=1.24.3",
    "python-dotenv>=1.0.0",
    "deepl>=1.15.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "flake8~=5.0.4",
    "isort~=5.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line-length = 119
